[gd_scene load_steps=8 format=3 uid="uid://di7cb42qmtsdi"]

[ext_resource type="Script" path="res://overworld/starting_cutscene.gd" id="1_5f7pw"]
[ext_resource type="Theme" uid="uid://d2ijyc316xeom" path="res://assets/art/ui_elements/ui_theme.tres" id="1_qugxp"]
[ext_resource type="Texture2D" uid="uid://bgat8xgkrinyt" path="res://assets/art/cutscenes/cutscene_1.png" id="1_swtph"]
[ext_resource type="Texture2D" uid="uid://bxdhhpyv0k2tu" path="res://assets/art/cutscenes/cutscene_2.png" id="2_b61kx"]
[ext_resource type="AudioStream" uid="uid://b1diue16pa0ld" path="res://assets/sound/Victory.wav" id="3_e6ucf"]
[ext_resource type="Texture2D" uid="uid://diyjys6gt5lej" path="res://assets/art/cutscenes/cutscene_3.png" id="3_rlk5f"]
[ext_resource type="Script" path="res://sound/effects_sound.gd" id="4_wm0ld"]

[node name="StartingCutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qugxp")
script = ExtResource("1_5f7pw")

[node name="Sound Effects" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e6ucf")
max_polyphony = 3
script = ExtResource("4_wm0ld")

[node name="Cutscene3" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1429.0
offset_bottom = 802.0

[node name="Cutscene3Pic" type="TextureRect" parent="Cutscene3"]
layout_mode = 0
offset_right = 1169.0
offset_bottom = 805.0
texture = ExtResource("3_rlk5f")
expand_mode = 5
stretch_mode = 4

[node name="Button3" type="Button" parent="Cutscene3"]
layout_mode = 0
offset_left = 579.0
offset_top = 540.0
offset_right = 1120.0
offset_bottom = 621.0
theme_override_font_sizes/font_size = 80
text = "Start Game..."

[node name="Cutscene2" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1433.0
offset_bottom = 802.0

[node name="Cutscene2Pic" type="TextureRect" parent="Cutscene2"]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 800.119
texture = ExtResource("2_b61kx")
expand_mode = 5
stretch_mode = 4

[node name="Button2" type="Button" parent="Cutscene2"]
layout_mode = 0
offset_left = 860.0
offset_top = 540.0
offset_right = 1121.0
offset_bottom = 621.0
theme_override_font_sizes/font_size = 80
text = "Next..."

[node name="Cutscene1" type="Control" parent="."]
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 647.0

[node name="Cutscene1Pic" type="TextureRect" parent="Cutscene1"]
layout_mode = 0
offset_right = 1430.0
offset_bottom = 651.0
texture = ExtResource("1_swtph")
expand_mode = 3
stretch_mode = 4

[node name="Button1" type="Button" parent="Cutscene1"]
layout_mode = 0
offset_left = 860.0
offset_top = 540.0
offset_right = 1121.0
offset_bottom = 621.0
theme_override_font_sizes/font_size = 80
text = "Next..."

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 114.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 40
text = "skip"

[connection signal="play_sound" from="." to="Sound Effects" method="_on_button_pressed"]
[connection signal="pressed" from="Cutscene3/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Cutscene2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Cutscene1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
